--- a/index.html
+++ b/index.html
@@ -29,19 +29,22 @@
     </div>
   </header>
 
-  <main class="hero">
-    <video class="hero-video" autoplay muted loop>
-      <source src="media_doc/homepage/video/boost.mp4" type="video/mp4">
-    </video>
-    <div class="container">
-      <div class="hero-center">
-        <!-- <h1 class="hero-title">Example Studio</h1> -->
-        <p class="hero-sub">
-          SPARK is a course offered as GERM 307 at UNC–CH.
-        </p>
-        <div class="hero-hint">Use the navigation above to explore</div>
+  <main class="hero home-hero">
+    <div class="hero-animated-bg" aria-hidden="true">
+      <div class="hero-wordmark-line top">
+        <span class="hero-char c1">S</span>
+        <span class="hero-char c2">P</span>
+        <span class="hero-char c3">A</span>
+        <span class="hero-char c4">R</span>
+        <span class="hero-char c5">K</span>
       </div>
+      <div class="hero-wordmark-line bottom">
+        <span class="hero-script">for</span>
+        <span class="hero-german">GERMAN</span>
+      </div>
+      <div class="hero-hint">Use the navigation above to explore</div>
     </div>
+
   </main>
 
   <div class="footer">© 2026 Example Studio · All rights reserved.</div>
