Added Our Partners Page

--- a/about/topic-a.html
+++ b/about/topic-a.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
-	<title>Example Studio · Topic A</title>
+	<title>SPARK · Topic A</title>
 	<link rel="icon" href="../media_doc/placeholders/Placeholder.jpg" type="image/jpeg" />
 	<link rel="stylesheet" href="../assets/css/style.css" />
 	<link rel="stylesheet" href="../assets/css/pages/about-detail.css" />
@@ -16,7 +16,7 @@
 			<div class="inner">
 				<div class="logo" role="heading" aria-level="1">
 					<span class="logo-badge" aria-hidden="true"><img src="../media_doc/placeholders/Placeholder.jpg"
-							alt="" /></span><span>Example Studio</span>
+							alt="" /></span><span>SPARK</span>
 				</div>
 				<nav class="nav">
 					<a href="../index.html">Home</a>
@@ -141,7 +141,7 @@
 		</section>
 	</main>
 
-	<div class="footer">© 2026 Example Studio · All rights reserved.</div>
+	<div class="footer">© 2026 SPARK · All rights reserved.</div>
 	<script src="../assets/js/main.js"></script>
 </body>
 
