--- a/news.html
+++ b/news.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Example Studio · News</title>
+  <title>SPARK · News</title>
   <link rel="icon" href="media_doc/placeholders/Placeholder.jpg" type="image/jpeg" />
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
@@ -15,11 +15,12 @@
       <div class="inner">
         <div class="logo" role="heading" aria-level="1">
           <span class="logo-badge" aria-hidden="true"><img src="media_doc/placeholders/Placeholder.jpg"
-              alt="" /></span><span>Example Studio</span>
+              alt="" /></span><span>SPARK</span>
         </div>
         <nav class="nav">
           <a href="index.html">Home</a>
           <a href="about.html">About</a>
+          <a href="partner.html">Our Partners</a>
           <a href="news.html">News</a>
           <a href="contact.html">Contact</a>
         </nav>
@@ -81,7 +82,7 @@
     </div>
   </main>
 
-  <div class="footer">© 2026 Example Studio · All rights reserved.</div>
+  <div class="footer">© 2026 SPARK · All rights reserved.</div>
   <script src="assets/js/main.js"></script>
 </body>
 
