--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <nav class="nav">
           <a href="index.html">Home</a>
           <a href="about.html">About</a>
+          <a href="partner.html">Our Partners</a>
           <a href="news.html">News</a>
           <a href="contact.html">Contact</a>
         </nav>
@@ -46,7 +47,7 @@
 
   </main>
 
-  <div class="footer">© 2026 Example Studio · All rights reserved.</div>
+  <div class="footer">© 2026 SPARK · All rights reserved.</div>
 
   <script src="assets/js/main.js"></script>
 </body>
