Added words animation on index page

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     </div>
 
   </main>
+  <div class="hero-handwriting-layer" aria-hidden="true"></div>
 
   <div class="footer">© 2026 SPARK · All rights reserved.</div>
 
