Added three partners

--- a/partner.html
+++ b/partner.html
@@ -50,13 +50,22 @@
                 <h2 id="partner-logos-title" class="partner-logos-title">Our Partners</h2>
                 <ul class="partner-logo-list">
                     <li class="partner-logo-item">
+                        <img src="media_doc/Our Partners/NCSSMLogo.jpg" alt="NCSSM logo" />
+                    </li>
+                    <li class="partner-logo-item">
+                        <img src="media_doc/Our Partners/gist.jpg" alt="GIST logo" />
+                    </li>
+                    <li class="partner-logo-item">
+                        <img src="media_doc/Our Partners/art_center.jpg" alt="art-center logo" />
+                    </li>
+                    <li class="partner-logo-item">
+                        <img src="media_doc/Our Partners/orange_county_lib.jpg" alt="orange country logo" />
+                    </li>
+                    <li class="partner-logo-item">
                         <img src="media_doc/Our Partners/AATG.jpg" alt="AATG logo" />
                     </li>
                     <li class="partner-logo-item">
                         <img src="media_doc/Our Partners/Goethe.jpg" alt="Goethe logo" />
-                    </li>
-                    <li class="partner-logo-item">
-                        <img src="media_doc/Our Partners/NCSSMLogo.jpg" alt="NCSSM logo" />
                     </li>
                 </ul>
             </section>
