Added Better Screen adaption and unc logo

--- a/partner.html
+++ b/partner.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>SPARK · Our Partners</title>
-    <link rel="icon" href="media_doc/placeholders/Placeholder.jpg" type="image/jpeg" />
+    <link rel="icon" href="media_doc/homepage/unc_logo.jpg" type="image/jpeg" />
     <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
@@ -14,8 +14,8 @@
         <div class="container">
             <div class="inner">
                 <div class="logo" role="heading" aria-level="1">
-                    <span class="logo-badge" aria-hidden="true"><img src="media_doc/placeholders/Placeholder.jpg"
-                            alt="" /></span>
+                            <a class="logo-badge" href="https://gsll.unc.edu/" target="_blank" rel="noopener noreferrer" aria-label="Visit UNC GSLL website"><img src="media_doc/homepage/unc_logo.jpg"
+                                alt="UNC logo" /></a>
                     <span>SPARK</span>
                 </div>
 
