--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>SPARK · About</title>
-  <link rel="icon" href="media_doc/placeholders/Placeholder.jpg" type="image/jpeg" />
+  <link rel="icon" href="media_doc/homepage/unc_logo.jpg" type="image/jpeg" />
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
@@ -14,8 +14,8 @@
     <div class="container">
       <div class="inner">
         <div class="logo" role="heading" aria-level="1">
-          <span class="logo-badge" aria-hidden="true"><img src="media_doc/placeholders/Placeholder.jpg"
-              alt="" /></span><span>SPARK</span>
+              <a class="logo-badge" href="https://gsll.unc.edu/" target="_blank" rel="noopener noreferrer" aria-label="Visit UNC GSLL website"><img src="media_doc/homepage/unc_logo.jpg"
+                alt="UNC logo" /></a><span>SPARK</span>
         </div>
         <nav class="nav">
           <a href="index.html">Home</a>
@@ -40,7 +40,6 @@
             Placeholder description for a featured section.
             Add a short summary here (image/video/text supported).
           </p>
-          <a class="banner-btn" href="about/topic-a.html">Learn more</a>
         </div>
       </div>
     </section>
@@ -56,7 +55,6 @@
             Placeholder description for a second section.
             Use this area for a short intro.
           </p>
-          <a class="banner-btn" href="about/topic-b.html">Learn more</a>
         </div>
       </div>
     </section>
@@ -71,7 +69,6 @@
             Placeholder description for a third section.
             Keep it concise and scannable.
           </p>
-          <a class="banner-btn" href="about/topic-c.html">Learn more</a>
         </div>
       </div>
     </section>
@@ -85,7 +82,6 @@
           <p class="banner-desc">
             Placeholder description for a fourth section.
           </p>
-          <a class="banner-btn" href="about/topic-d.html">Learn more</a>
         </div>
       </div>
     </section>
