--- a/about.html
+++ b/about.html
@@ -14,8 +14,8 @@
     <div class="container">
       <div class="inner">
         <div class="logo" role="heading" aria-level="1">
-              <a class="logo-badge" href="https://gsll.unc.edu/" target="_blank" rel="noopener noreferrer" aria-label="Visit UNC GSLL website"><img src="media_doc/homepage/unc_logo.jpg"
-                alt="UNC logo" /></a><span>SPARK</span>
+          <a class="logo-badge" href="https://gsll.unc.edu/" target="_blank" rel="noopener noreferrer" aria-label="Visit UNC GSLL website"><img src="media_doc/homepage/unc_logo.jpg" alt="UNC logo" /></a>
+          <span>SPARK</span>
         </div>
         <nav class="nav">
           <a href="index.html">Home</a>
@@ -28,66 +28,113 @@
     </div>
   </header>
 
-  <main class="page page-banners">
+  <main class="page page-about">
+    <div class="container">
+      <section class="content" aria-label="Course description and placeholder">
+        <div class="about-hero" role="region" aria-label="Course spotlight">
+          <img src="media_doc/about/city.jpg" alt="" class="about-hero-bg" aria-hidden="true" />
+          <div class="about-copy">
+            <p class="about-kicker">About</p>
+            <h1 class="about-title">Course Description</h1>
+            <p class="about-desc">
+              The goal of this course is to enrich students' knowledge of German by giving them the opportunity to
+              teach elementary German classes to high school students at a local partner school. In preparation for
+              teaching, students will learn about current best practices in foreign language pedagogy by engaging with
+              foundational texts from the discipline as well as from invited guest speakers. Students will also gain
+              first-hand experience designing teaching materials and learning about curricular design.
+            </p>
+          </div>
+        </div>
+      </section>
 
-    <section class="banner" data-bg="media_doc/placeholders/Placeholder.jpg">
-      <div class="banner-overlay"></div>
-      <div class="banner-inner container">
-        <div class="banner-copy left">
-          <h2 class="banner-title">Example Topic A</h2>
-          <div class="banner-rule"></div>
-          <p class="banner-desc">
-            Placeholder description for a featured section.
-            Add a short summary here (image/video/text supported).
+      <section class="about-testimonials" aria-labelledby="about-testimonials-title">
+        <div class="about-testimonials-head">
+          <h2 id="about-testimonials-title" class="about-testimonials-title">Testimonials</h2>
+          <p class="about-testimonials-desc">
+            Explore feedback from collaborators and practitioners who have used this course design in real teaching
+            contexts.
           </p>
         </div>
-      </div>
-    </section>
 
+        <div class="about-testimonials-grid" data-max-items="2">
+          <figure class="about-comment-card">
+            <blockquote class="about-comment-quote">
+              <h3>Speechless with how easy this was to integrate</h3>
+              <p>
+                “I recently got my hands on this course framework, and I am speechless with how easy it was to adapt
+                into my application and classroom planning workflow.”
+              </p>
+            </blockquote>
+            <figcaption class="about-comment-author">
+              <img src="media_doc/placeholders/Placeholder.jpg" alt="Profile placeholder" />
+              <div>
+                <strong>Bonnie Green</strong>
+                <span>Developer at Open AI</span>
+              </div>
+            </figcaption>
+          </figure>
 
-    <section class="banner" data-bg="media_doc/placeholders/Placeholder.jpg">
-      <div class="banner-overlay"></div>
-      <div class="banner-inner container">
-        <div class="banner-copy right">
-          <h2 class="banner-title">Example Topic B</h2>
-          <div class="banner-rule"></div>
-          <p class="banner-desc">
-            Placeholder description for a second section.
-            Use this area for a short intro.
-          </p>
+          <figure class="about-comment-card">
+            <blockquote class="about-comment-quote">
+              <h3>Solid foundation for any project</h3>
+              <p>
+                “This module provides a robust set of teaching elements and a practical structure that works both for
+                planning and delivery in modern language classrooms.”
+              </p>
+            </blockquote>
+            <figcaption class="about-comment-author">
+              <img src="media_doc/placeholders/Placeholder.jpg" alt="Profile placeholder" />
+              <div>
+                <strong>Roberta Casas</strong>
+                <span>Lead Designer at Dropbox</span>
+              </div>
+            </figcaption>
+          </figure>
+
+          <figure class="about-comment-card">
+            <blockquote class="about-comment-quote">
+              <h3>Mindblowing workflow and variants</h3>
+              <p>
+                “Everything is clearly structured and simple to use. It significantly improved how we build lesson
+                plans and collaborate across departments.”
+              </p>
+            </blockquote>
+            <figcaption class="about-comment-author">
+              <img src="media_doc/placeholders/Placeholder.jpg" alt="Profile placeholder" />
+              <div>
+                <strong>Jese Leos</strong>
+                <span>Software Engineer at Facebook</span>
+              </div>
+            </figcaption>
+          </figure>
+
+          <figure class="about-comment-card">
+            <blockquote class="about-comment-quote">
+              <h3>Efficient collaborating</h3>
+              <p>
+                “You have practical examples and a clear sequence that helps teams prototype and execute classroom
+                activities quickly and consistently.”
+              </p>
+            </blockquote>
+            <figcaption class="about-comment-author">
+              <img src="media_doc/placeholders/Placeholder.jpg" alt="Profile placeholder" />
+              <div>
+                <strong>Joseph McFall</strong>
+                <span>CTO at Google</span>
+              </div>
+            </figcaption>
+          </figure>
         </div>
-      </div>
-    </section>
 
-    <section class="banner" data-bg="media_doc/placeholders/Placeholder.jpg">
-      <div class="banner-overlay"></div>
-      <div class="banner-inner container">
-        <div class="banner-copy left">
-          <h2 class="banner-title">Example Topic C</h2>
-          <div class="banner-rule"></div>
-          <p class="banner-desc">
-            Placeholder description for a third section.
-            Keep it concise and scannable.
-          </p>
+        <div class="about-testimonials-actions">
+          <button type="button" class="about-testimonials-more" aria-expanded="false" hidden>Show more</button>
         </div>
-      </div>
-    </section>
-
-    <section class="banner" data-bg="media_doc/placeholders/Placeholder.jpg">
-      <div class="banner-overlay"></div>
-      <div class="banner-inner container">
-        <div class="banner-copy right">
-          <h2 class="banner-title">Example Topic D</h2>
-          <div class="banner-rule"></div>
-          <p class="banner-desc">
-            Placeholder description for a fourth section.
-          </p>
-        </div>
-      </div>
-    </section>
+      </section>
+    </div>
   </main>
 
   <div class="footer">© 2026 SPARK · All rights reserved.</div>
+
   <script src="assets/js/main.js"></script>
 </body>
 
