Updated the spacing on about page

--- a/about.html
+++ b/about.html
@@ -14,7 +14,8 @@
     <div class="container">
       <div class="inner">
         <div class="logo" role="heading" aria-level="1">
-          <a class="logo-badge" href="https://gsll.unc.edu/" target="_blank" rel="noopener noreferrer" aria-label="Visit UNC GSLL website"><img src="media_doc/homepage/unc_logo.jpg" alt="UNC logo" /></a>
+          <a class="logo-badge" href="https://gsll.unc.edu/" target="_blank" rel="noopener noreferrer"
+            aria-label="Visit UNC GSLL website"><img src="media_doc/homepage/unc_logo.jpg" alt="UNC logo" /></a>
           <span>SPARK</span>
         </div>
         <nav class="nav">
@@ -49,78 +50,73 @@
 
       <section class="about-testimonials" aria-labelledby="about-testimonials-title">
         <div class="about-testimonials-head">
-          <h2 id="about-testimonials-title" class="about-testimonials-title">Testimonials</h2>
+          <h2 id="about-testimonials-title" class="about-testimonials-title">Alumini Commets</h2>
           <p class="about-testimonials-desc">
-            Explore feedback from collaborators and practitioners who have used this course design in real teaching
-            contexts.
+            Explore feed back from SPARK alumnis
           </p>
         </div>
 
         <div class="about-testimonials-grid" data-max-items="2">
           <figure class="about-comment-card">
             <blockquote class="about-comment-quote">
-              <h3>Speechless with how easy this was to integrate</h3>
+              <h3>Spark comment</h3>
               <p>
-                “I recently got my hands on this course framework, and I am speechless with how easy it was to adapt
-                into my application and classroom planning workflow.”
+                “I took Spark, and it was great”
               </p>
             </blockquote>
             <figcaption class="about-comment-author">
               <img src="media_doc/placeholders/Placeholder.jpg" alt="Profile placeholder" />
               <div>
-                <strong>Bonnie Green</strong>
-                <span>Developer at Open AI</span>
+                <strong>Alumi 1</strong>
+                <span>Freshman</span>
               </div>
             </figcaption>
           </figure>
 
           <figure class="about-comment-card">
             <blockquote class="about-comment-quote">
-              <h3>Solid foundation for any project</h3>
+              <h3>Spark comment</h3>
               <p>
-                “This module provides a robust set of teaching elements and a practical structure that works both for
-                planning and delivery in modern language classrooms.”
+                “I took Spark, and it was great”
               </p>
             </blockquote>
             <figcaption class="about-comment-author">
               <img src="media_doc/placeholders/Placeholder.jpg" alt="Profile placeholder" />
               <div>
-                <strong>Roberta Casas</strong>
-                <span>Lead Designer at Dropbox</span>
+                <strong>Alumi 2</strong>
+                <span>Sophomore</span>
               </div>
             </figcaption>
           </figure>
 
           <figure class="about-comment-card">
             <blockquote class="about-comment-quote">
-              <h3>Mindblowing workflow and variants</h3>
+              <h3>Spark comment</h3>
               <p>
-                “Everything is clearly structured and simple to use. It significantly improved how we build lesson
-                plans and collaborate across departments.”
+                “I took Spark, and it was great”
               </p>
             </blockquote>
             <figcaption class="about-comment-author">
               <img src="media_doc/placeholders/Placeholder.jpg" alt="Profile placeholder" />
               <div>
-                <strong>Jese Leos</strong>
-                <span>Software Engineer at Facebook</span>
+                <strong>Alumi 3</strong>
+                <span>Junior</span>
               </div>
             </figcaption>
           </figure>
 
           <figure class="about-comment-card">
             <blockquote class="about-comment-quote">
-              <h3>Efficient collaborating</h3>
+              <h3>Spark comment</h3>
               <p>
-                “You have practical examples and a clear sequence that helps teams prototype and execute classroom
-                activities quickly and consistently.”
+                “I took Spark, and it was great”
               </p>
             </blockquote>
             <figcaption class="about-comment-author">
               <img src="media_doc/placeholders/Placeholder.jpg" alt="Profile placeholder" />
               <div>
-                <strong>Joseph McFall</strong>
-                <span>CTO at Google</span>
+                <strong>Alumi 4</strong>
+                <span>Senior</span>
               </div>
             </figcaption>
           </figure>
